<resources>
    <string name="app_name">Sổ tay</string>
    <string name="btn_setting_desc">Cài đặt</string>
    <string name="btn_trash_can_desc">Thùng rác</string>
    <string name="tv_home_header">Ghi chú</string>
    <string name="edt_search_hint">Tìm kiếm ghi chú</string>
    <string name="fab_add_note_desc">Thêm ghi chú</string>
    <string name="btn_back_desc">Quay lại</string>
    <string name="tv_setting_cloud">Dịch vụ đám mây</string>
    <string name="tv_setting_style">Phong cách</string>
    <string name="tv_setting_text_size">Cỡ chữ</string>
    <string name="tv_setting_sort">Sắp xếp</string>
    <string name="tv_setting_layout">Bố cục</string>
    <string name="tv_setting_theme">Chủ đề</string>
    <string name="tv_setting_github">Github</string>
    <string name="tv_setting_logout">Đăng xuất</string>
    <string name="default_username">Người dùng</string>
    <string name="logout_dialog_title">Đăng xuất</string>
    <string name="logout_dialog_message">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="logout_success">Đã đăng xuất thành công</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="tv_login">Đăng nhập</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Mật khẩu</string>
    <string name="cb_remember_password">Nhớ mật khẩu</string>
    <string name="tv_forgot_password">Quên mật khẩu?</string>
    <string name="tv_or_continue">Hoặc tiếp tục với</string>
    <string name="tv_facebook">Facebook</string>
    <string name="tv_google">Google</string>
    <string name="tv_register_link">Chưa có tài khoản? Đăng ký</string>
    <string name="tv_register">Đăng ký</string>
    <string name="tv_repassword">Nhập lại mật khẩu</string>
    <string name="tv_display_name">Tên hiển thị</string>
    <string name="tv_login_link">Bạn đã có tài khoản? Đăng nhập</string>
    <string name="tv_pin_unpin">Ghim/Bỏ ghim</string>
    <string name="tv_delete">Xóa</string>
    <string name="tv_share">Chia sẻ</string>
    <string name="tv_default_text_size">Nhỏ</string>
    <string name="tv_default_sort_by">Theo ngày tạo</string>
    <string name="tv_default_layout">Xem theo danh sách</string>
    <string name="tv_default_theme">Sáng</string>
    <string name="save">Lưu</string>
    <string name="fab_color_picker">Chọn màu</string>
    <string name="fab_undo">Hoàn tác</string>
</resources>
