<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#313340">

    <androidx.cardview.widget.CardView
            android:id="@+id/cv_draw"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

            <ImageButton
                    android:id="@+id/btn_back"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_back"
                    android:contentDescription="@string/btn_back_desc" />

            <ImageButton
                    android:id="@+id/btnSave"
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/save"
                    android:src="@drawable/check_solid1" />

            <com.github.gcacace.signaturepad.views.SignaturePad
                    android:id="@+id/signature_pad"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/btn_back" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_undo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/fab_undo"
            app:srcCompat="@drawable/ic_undo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fb_colour_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/fab_color_picker"
            app:srcCompat="@drawable/ic_color_picker" />
</RelativeLayout>
