<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeActivity"
        android:orientation="vertical"
        android:background="@color/app_background">

    <FrameLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_home_header"
                android:textColor="@color/primary_text"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textFontWeight="500" />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_gravity="end">

            <ImageButton
                    android:id="@+id/btn_trash_can"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_trash_can"
                    android:contentDescription="@string/btn_trash_can_desc" />

            <ImageButton
                    android:id="@+id/btn_setting"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_setting"
                    android:contentDescription="@string/btn_setting_desc" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginHorizontal="24sp">

        <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext_background"
                android:layout_marginTop="12dp"
                app:queryHint="@string/edt_search_hint"
                app:submitBackground="@null"
                app:queryBackground="@null"
                app:iconifiedByDefault="false" />

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="8dp"
                    android:id="@+id/rv_notes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rounded_corner_top"
                    android:clipToOutline="true"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:ignore="UnusedAttribute" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_add_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_marginBottom="60sp"
                    android:layout_marginEnd="20sp"
                    android:contentDescription="@string/fab_add_note_desc"
                    android:src="@drawable/ic_add_white"
                    app:backgroundTint="@color/fab_add_note"
                    app:tint="@null"
                    app:shapeAppearance="?attr/shapeAppearance" />
        </FrameLayout>

    </LinearLayout>
</LinearLayout>
